<resources>
    <string name="app_name">SDP_AssistiveRobot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">"Log out"</string>

    <!--  Calendar Fragment  -->
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>

    <string-array name="months">
        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="priorities">
        <item>Priority</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="locations">
        <item>Location</item>
        <item>Room 1</item>
        <item>Room 2</item>
        <item>Room 3</item>
    </string-array>

    <string-array name="categories">
        <item>Category</item>
        <item>Both</item>
        <item>Food</item>
        <item>Water</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
